--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,25 @@
     "xmemory": "cpp",
     "xstddef": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "array": "cpp",
+    "bit": "cpp",
+    "*.tcc": "cpp",
+    "clocale": "cpp",
+    "cstdarg": "cpp",
+    "ctime": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "algorithm": "cpp",
+    "functional": "cpp",
+    "memory_resource": "cpp",
+    "numeric": "cpp",
+    "optional": "cpp",
+    "random": "cpp",
+    "string_view": "cpp",
+    "complex": "cpp"
   }
 }
